<resources>
    <string name="app_name">ChitChat</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="title_activity_main">Conversations</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_conversation">ConversationActivity</string>
    <string name="chit_n_chat">CHIT\nCHAT</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="cancel">Cancel</string>
    <string name="sign_up">Sign up</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="confirm">Confirm</string>
</resources>
