<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#01579b"
    tools:context="com.example.michiel.mobapp_michielvanbergen.RegisterActivity">

    <EditText
        android:id="@+id/FirstNameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="#FFF"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="#FFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/EmailLabel"
        app:layout_constraintTop_toBottomOf="@+id/EmailLabel" />

    <EditText
        android:id="@+id/LastNameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:backgroundTint="#FFF"
        android:inputType="textPassword"
        android:textColor="#FFF"
        app:layout_constraintEnd_toEndOf="@+id/FirstNameEditText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/PasswordLabel"
        app:layout_constraintTop_toBottomOf="@+id/PasswordLabel" />

    <EditText
        android:id="@+id/ConfirmPasswordEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFF"
        android:inputType="textPassword"
        android:textColor="#FFF"
        app:layout_constraintEnd_toEndOf="@+id/LastNameEditText"
        app:layout_constraintStart_toStartOf="@+id/ConfirmPasswordLabel"
        app:layout_constraintTop_toBottomOf="@+id/ConfirmPasswordLabel" />

    <Button
        android:id="@+id/RegisterButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="#03a9f4"
        android:text="@string/register"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="@+id/ConfirmPasswordEditText"
        app:layout_constraintStart_toStartOf="@+id/ConfirmPasswordEditText"
        app:layout_constraintTop_toBottomOf="@+id/ConfirmPasswordEditText" />

    <Button
        android:id="@+id/BackButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="#03a9f4"
        android:text="@string/cancel"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="@+id/RegisterButton"
        app:layout_constraintStart_toStartOf="@+id/RegisterButton"
        app:layout_constraintTop_toBottomOf="@+id/RegisterButton" />

    <TextView
        android:id="@+id/EmailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="90dp"
        android:text="@string/e_mail"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="#FFF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/PasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/password"
        android:textColor="#FFF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/FirstNameEditText"
        app:layout_constraintTop_toBottomOf="@+id/FirstNameEditText" />

    <TextView
        android:id="@+id/ConfirmPasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/confirm_password"
        android:textColor="#FFF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/LastNameEditText"
        app:layout_constraintTop_toBottomOf="@+id/LastNameEditText" />

</android.support.constraint.ConstraintLayout>
