<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#01579b"
    tools:context="com.example.michiel.mobapp_michielvanbergen.LoginActivity">

    <EditText
        android:id="@+id/FirstNameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#FFF"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="#FFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/EmailLabel"
        app:layout_constraintTop_toBottomOf="@+id/EmailLabel" />

    <EditText
        android:id="@+id/LastNameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFF"
        android:inputType="textPassword"
        android:textColor="#FFF"
        app:layout_constraintEnd_toEndOf="@+id/FirstNameEditText"
        app:layout_constraintStart_toStartOf="@+id/PasswordLabel"
        app:layout_constraintTop_toBottomOf="@+id/PasswordLabel" />

    <Button
        android:id="@+id/ConfirmButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="#03a9f4"
        android:text="@string/sign_in"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="@+id/LastNameEditText"
        app:layout_constraintStart_toStartOf="@+id/LastNameEditText"
        app:layout_constraintTop_toBottomOf="@+id/LastNameEditText" />

    <Button
        android:id="@+id/SignUpButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="#03a9f4"
        android:text="@string/sign_up"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="@+id/LastNameEditText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/LastNameEditText"
        app:layout_constraintTop_toBottomOf="@+id/ConfirmButton" />

    <TextView
        android:id="@+id/EmailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/e_mail"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="#FFF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />


    <TextView
        android:id="@+id/PasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/password"
        android:textColor="#FFF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/FirstNameEditText"
        app:layout_constraintTop_toBottomOf="@+id/FirstNameEditText" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="171dp"
        android:layout_height="180dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo" />

</android.support.constraint.ConstraintLayout>
